--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,7 @@
     <title>Home</title>
 </head>
 <body>
+Tutaj powinna być treść strony...
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="Sign Out"/>
 </form>
