--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 Tutaj powinna być treść strony...
+<p th:text="${name}"></p>
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="Sign Out"/>
 </form>
